# Billing-Meter

./: .gitignore  DEPLOYMENT.md  Readme.md  docker-compose.yml  package-lock.json  render.yaml
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/src/: api.js  index.js  seed.js
backend/src/config/: minio.js
backend/src/middleware/: auth.js
backend/src/models/: Invoice.js  Usage.js  User.js
backend/src/routes/: auth.js  billing.js  object.js  usage.js
cpp-engine/: CMakeLists.txt  CMakeLists.txt.save  Dockerfile
cpp-engine/src/: billing.cpp  billing.h  main.cpp  meter.cpp  meter.h  server.cpp
cpp-engine/tests/: test_meter.cpp
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
ml-engine/: Dockerfile  predict.py
